Fix spacing and cleanup css.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -3,7 +3,6 @@
   padding: 0
 
 body
-  /* font-family: Helvetica, sans-serif; */
   font-family: Esteban, serif
   color: #000
 
@@ -12,19 +11,16 @@ body
   margin: 0 auto
 
 h1
-  /* font-size: 1.5em; */
   font-size: 5em
   width: 100%
-  /* border-bottom: 1px solid #afafaf; */
   padding: 0.4em 0 0.1em
 
 span
   margin-right: 1em
 
 div.menu
-  margin: 2em 0
   font-size: 0.7em
-  /* border-bottom: 1px solid #000; */
+  padding: 1.3em 0
 
 div.people, div.welcome
   overflow: hidden
@@ -40,7 +36,12 @@ input
   font-size: 0.9em
   border: 0.1em solid #000
   padding: 0.35em
+
+input.thought
   width: 20em
+
+input.form-input
+  width: 190px
 
 input:focus
   outline: 4px solid transparent
@@ -50,10 +51,9 @@ input:focus
   border: 0
 
 h2
-  /* font-size: 0.8em; */
   font-size: 3em
   font-weight: normal
-  line-height: 1.5em
+  line-height: 1.5
   margin-bottom: 0.1em
 
 p
@@ -77,14 +77,11 @@ div.td
   width: 100px
   padding-top: 0.3em
 
-.form-input
-  width: 190px
-
 .row-spacing
   padding-bottom: 0.5em
 
 .form-spacing
-  margin-bottom: 3em
+  margin-bottom: 0.6em
 
 .float-right
   float: right
